# pi_edge_detector_ros2

./: .gitignore  Dockerfile
.github/workflows/: docker-arm64.yml
src/pub_sub_demo/: package.xml  setup.cfg  setup.py
src/pub_sub_demo/pub_sub_demo/: listener.py  talker.py
