<?xml version="1.0"?>
<package format="3">
  <name>pub_sub_test</name>
  <version>0.0.1</version>
  <description>Minimal ROS2 Python pub/sub test node</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

